# DSE-CAP-Round-Cutoff-Scraper

./: README.md  colleges_links.csv  cutoffs_raw.csv  dse_cutoffs_2025.xlsx  explore_page.py  explore_pdf.py  institudes.csv  main.py  page_source.html  phase1_download.py  phase2_extract.py  phase3_excel.py  pyproject.toml
